add_subdirectory(genrb)
add_subdirectory(toolutil)
add_subdirectory(gennorm2)
add_subdirectory(gensprep)
add_subdirectory(gentest)
add_subdirectory(makeconv)
add_subdirectory(pkgdata)
add_subdirectory(ctestfw)

set(GENBRK_SRCS "${CMAKE_CURRENT_LIST_DIR}/genbrk/genbrk.cpp" PARENT_SCOPE)
set(GENCCODE_SRCS "${CMAKE_CURRENT_LIST_DIR}/genccode/genccode.c" PARENT_SCOPE)
set(GENCFU_SRCS "${CMAKE_CURRENT_LIST_DIR}/gencfu/gencfu.cpp" PARENT_SCOPE)
set(GENCMN_SRCS "${CMAKE_CURRENT_LIST_DIR}/gencmn/gencmn.c" PARENT_SCOPE)
set(GENCNVAL_SRCS "${CMAKE_CURRENT_LIST_DIR}/gencnval/gencnval.c" PARENT_SCOPE)
set(GENDICT_SRCS "${CMAKE_CURRENT_LIST_DIR}/gendict/gendict.cpp" PARENT_SCOPE)
set(ICUINFO_SRCS "${CMAKE_CURRENT_LIST_DIR}/icuinfo/icuinfo.cpp" PARENT_SCOPE)
set(ICUPKG_SRCS "${CMAKE_CURRENT_LIST_DIR}/icupkg/icupkg.cpp" PARENT_SCOPE)
set(TESTPLUG_SRCS "${CMAKE_CURRENT_LIST_DIR}/icuinfo/testplug.c" PARENT_SCOPE)

set(DERB_SRCS ${DERB_SRCS} PARENT_SCOPE)
set(GENRB_SRCS ${GENRB_SRCS} PARENT_SCOPE)
set(GENNORM2_SRCS ${GENNORM2_SRCS} PARENT_SCOPE)
set(GENSPREP_SRCS ${GENSPREP_SRCS} PARENT_SCOPE)
set(GENTEST_SRCS ${GENTEST_SRCS} PARENT_SCOPE)
set(MAKECONV_SRCS ${MAKECONV_SRCS} PARENT_SCOPE)
set(PKGDATA_SRCS ${PKGDATA_SRCS} PARENT_SCOPE)
set(CTESTFW_SRCS ${CTESTFW_SRCS} PARENT_SCOPE)
set(TOOLUTIL_SRCS ${TOOLUTIL_SRCS} PARENT_SCOPE)